Added zipped files importing and exporting. Removed json importing and exporting. File imports are now ascii/binary agnostic.

--- a/valarie/view/templates/_import.html
+++ b/valarie/view/templates/_import.html
@@ -1,16 +1,11 @@
 <div style="display:none">
-    <form id="importJSONForm" enctype="multipart/form-data">
-        <input id="importJSONFormInput" type="file" onchange="importJSONToInventory(this)"></input>
-    </form>
-</div>
-<div style="display:none">
     <form id="importObjectsZipForm" enctype="multipart/form-data">
         <input id="importObjectsZipFormInput" type="file" onchange="importObjectsZipToInventory(this)"></input>
     </form>
 </div>
 <div style="display:none">
-    <form id="importTextFilesZipForm" enctype="multipart/form-data">
-        <input id="importTextFilesZipFormInput" type="file" onchange="importTextFilesZipToInventory(this)"></input>
+    <form id="importFilesZipForm" enctype="multipart/form-data">
+        <input id="importFilesZipFormInput" type="file" onchange="importFilesZipToInventory(this)"></input>
     </form>
 </div>
 <div style="display:none">
@@ -19,12 +14,7 @@
     </form>
 </div>
 <div style="display:none">
-    <form id="importTextFileForm" enctype="multipart/form-data">
-        <input id="importTextFileFormInput" type="file" onchange="importTextFileToInventory(this)"></input>
-    </form>
-</div>
-<div style="display:none">
-    <form id="importBinaryFileForm" enctype="multipart/form-data">
-        <input id="importBinaryFileFormInput" type="file" onchange="importBinaryFileToInventory(this)"></input>
+    <form id="importFileForm" enctype="multipart/form-data">
+        <input id="importFileFormInput" type="file" onchange="importFileToInventory(this)"></input>
     </form>
 </div>
