--- a/valarie/view/templates/index.html
+++ b/valarie/view/templates/index.html
@@ -113,6 +113,7 @@
     <script src="/js/amcharts/xy.js"></script>
     <script src="/js/amcharts/plugins/export/export.js"></script>
     <script src="/js/inventory.js"></script>
+    <script src="/js/plotly-latest.min.js"></script>
     <!-- Menu Toggle Script -->
     <script>
       $("#menu-toggle").click(function(e) {
