--- a/valarie/view/templates/index.html
+++ b/valarie/view/templates/index.html
@@ -97,6 +97,7 @@
     <script src="/js/controller.js"></script>
     <script src="/js/console.js"></script>
     <script src="/js/queue.js"></script>
+    <script src="/js/result.js"></script>
     <script src="/js/textfile.js"></script>
     <script src="/js/binfile.js"></script>
     <script src="/js/hostgroup.js"></script>
